# big-pdf

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-local-vlm-ocr-unlimited-ocr.md  0002-corpus-brain-not-agent.md  0003-clause-graph-rule-cards-hybrid-retrieval.md  0004-sqlite-store.md
docs/runbooks/: sglang-unlimited-ocr-results.md  sglang-unlimited-ocr.md
src/massive_pdf/: __main__.py  store.py
src/massive_pdf/ingest/: __init__.py  ocr.py  ocr_import.py  pages.py  vlm.py
src/massive_pdf/retrieval/: __init__.py  cards.py  encoder.py  stage.py
src/massive_pdf/structure/: __init__.py  parser.py  stage.py  xrefs.py
tests/: test_cards_schema.py  test_cards_stage.py  test_cli_backend_selection.py  test_cli_subcommands.py  test_embed_stage.py  test_encoder.py  test_ocr_import.py  test_ocr_stage.py  test_pages_stage.py  test_parser.py  test_store.py  test_store_clauses.py  test_store_pages.py  test_store_rule_cards.py  test_structure_cli.py  test_structure_stage.py  test_vlm_backend.py  test_xrefs.py
