[project]
name = "massive-pdf-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    # Slice 2: PDF -> page images for OCR (issue #3).
    "pymupdf>=1.24",
    # Slice 5: numpy is used by the retrieval encoder/stage (issue #5).
    "numpy>=1.26",
]
description = "Ingestion + retrieval layer for Vietnamese regulatory PDFs."
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "src"
